[package]
name = "ronnbot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
shuttle-serenity = "0.21.0"
shuttle-runtime = "0.21.0"
serenity = { version = "0.11.5", default-features = false, features = ["builder","chrono","client","framework", "gateway","http","standard_framework","utils", "rustls_backend", "model"] }
shuttle-secrets = "0.21.0"
tracing = "0.1.37"
tracing-subscriber = "0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11.16", features = ["blocking"]}


[dependencies.tokio]
version = "1.26.0"
features = ["macros", "signal", "rt-multi-thread"]
